--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,4 +28,13 @@
         android:gravity="center_horizontal"
         android:text="@string/please_use_the_menu_in_the_sidebar_to_navigate" />
 
+    <Button
+        android:text="@string/call_wine_club"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lblWelcomeMsg"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="155dp"
+        android:id="@+id/btnCallWineClub" />
+
 </RelativeLayout>
