--- a/app/src/main/res/layout/fragment_wines.xml
+++ b/app/src/main/res/layout/fragment_wines.xml
@@ -10,4 +10,12 @@
         android:layout_height="match_parent"
         android:text="Wines" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:id="@+id/listWines"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="67dp" />
+
 </RelativeLayout>
