--- a/app/src/main/res/layout/fragment_wines.xml
+++ b/app/src/main/res/layout/fragment_wines.xml
@@ -2,14 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/wineFragContainer"
     tools:context="com.ciaranbyrne.corkd.activity.WinesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Wines" />
+        android:textSize="24sp"
+        android:layout_marginTop="15dp"
+        android:text="@string/wine_list"
+        android:id="@+id/tvWineList"
+        android:textAlignment="center" />
 
     <ListView
         android:layout_width="match_parent"
